Update BE: update transaction